--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -174,6 +174,7 @@ $spinkit-spinner-color: $primary !default;
 		background-color: $body-color;
 		background-position: left top;
 		background-size: 0 0;
+		min-height: 100%;
 		&::before{
 			content: '';
 			background-image: inherit;
