edit scroll edit block - logo

--- a/sourse/pug/blocks/header-block/_header-block.pug
+++ b/sourse/pug/blocks/header-block/_header-block.pug
@@ -1,6 +1,6 @@
 mixin header-block()
 	// / .Promo
-	section.section&attributes(attributes)
+	section.section#mainHead&attributes(attributes)
 		+b.prm
 			.wrp__bg.wow.slideInRight(data-wow-duration='1.2s')
 			// / WRP
