--- a/sourse/pug/blocks/s-logos/_s-logos.scss
+++ b/sourse/pug/blocks/s-logos/_s-logos.scss
@@ -84,7 +84,7 @@
 	@include media-breakpoint-only(lg) {}
 	@include media-breakpoint-only(xl) {
 		.container{
-			max-width: 800px;
+			// max-width: 800px;
 		}
 
 	}
