--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -70,38 +70,38 @@ block pagecontent
 		.show-form.d-lg-none.d-none
 			+icon("calculator")
 		#crlsNav.crls__nav
-			//- ul#headNav.crls__nav-menu.d-none.d-lg-flex
-			ul#headNav.crls__nav-menu
-				li(data-menuanchor="mainHead" class="active")
-					a(href="#mainHead") Главная
-				li(data-menuanchor="works")
-					a(href="#works") Наши работы
-				li(data-menuanchor="s-about")
-					a(href="#s-about") О нас
-				li(data-menuanchor="s-servises")
-					a(href="#s-servises") Услуги
-				li(data-menuanchor="s-logos")
-					a(href="#s-logos") Наши клиенты
-				li(data-menuanchor="s-form")
-					a(href="#s-form") Контакты
+			//- ul#headNav.crls__nav-menu
+			ul#headNav.crls__nav-menu.d-none.d-lg-flex
+				li(data-menuanchor="mainHead1" class="active")
+					a(href="#mainHead1") Главная
+				li(data-menuanchor="works1")
+					a(href="#works1") Наши работы
+				li(data-menuanchor="s-about1")
+					a(href="#s-about1") О нас
+				li(data-menuanchor="s-servises1")
+					a(href="#s-servises1") Услуги
+				li(data-menuanchor="s-logos1")
+					a(href="#s-logos1") Наши клиенты
+				li(data-menuanchor="s-form1")
+					a(href="#s-form1") Контакты
 				li( )
 					a(href="#") Блог
 			
-			//- ul.crls__nav-menu.d-lg-none
-			//- 	li( class="active")
-			//- 		a.scroll-link(href="#mainHead") Главная
-			//- 	li( )
-			//- 		a.scroll-link(href="#works") Наши работы
-			//- 	li( )
-			//- 		a.scroll-link(href="#s-about") О нас
-			//- 	li( )
-			//- 		a.scroll-link(href="#s-servises") Услуги
-			//- 	li( )
-			//- 		a.scroll-link(href="#s-logos") Наши клиенты
-			//- 	li( )
-			//- 		a.scroll-link(href="#s-form") Контакты
-			//- 	li( )
-			//- 		a.scroll-link(href="#") Блог
+			ul.crls__nav-menu.d-lg-none
+				li( class="active")
+					a.scroll-link(href="#mainHead") Главная
+				li( )
+					a.scroll-link(href="#works") Наши работы
+				li( )
+					a.scroll-link(href="#s-about") О нас
+				li( )
+					a.scroll-link(href="#s-servises") Услуги
+				li( )
+					a.scroll-link(href="#s-logos") Наши клиенты
+				li( )
+					a.scroll-link(href="#s-form") Контакты
+				li( )
+					a.scroll-link(href="#") Блог
 			
 			.crls__nav-scls.scls
 				p Связаться с нами:
