--- a/sourse/pug/blocks/s-form/_s-form.pug
+++ b/sourse/pug/blocks/s-form/_s-form.pug
@@ -1,6 +1,6 @@
 mixin s-form()
 	// start s-form
-	+b.SECTION.s-form.section&attributes(attributes)
+	+b.SECTION.s-form.section#s-form&attributes(attributes)
 		.container
 			+b.section-title.text-center
 				h2 
