--- a/sourse/pug/blocks/s-logos/_s-logos.pug
+++ b/sourse/pug/blocks/s-logos/_s-logos.pug
@@ -1,6 +1,6 @@
 mixin s-logos()
 	// start s-logos
-	+b.SECTION.s-logos.section&attributes(attributes)
+	+b.SECTION.s-logos.section#s-logos&attributes(attributes)
 		.container
 			+b.section-title.text-center
 				h2 Наши клиенты
