--- a/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
+++ b/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
@@ -1,6 +1,6 @@
 mixin s-portfolio()
 	// / .Works
-	section.wrks-wrap.section.scrollable&attributes(attributes)
+	section.wrks-wrap.section.scrollable#works&attributes(attributes)
 		+b.wrks 
 			+e.head
 				.wrks_bg
