--- a/sourse/pug/blocks/s-servises/_s-servises.scss
+++ b/sourse/pug/blocks/s-servises/_s-servises.scss
@@ -184,7 +184,9 @@
 	//
 	@include media-breakpoint-down(xl) {}
 	@include media-breakpoint-down(lg) {}
-	@include media-breakpoint-down(md) {}
+	@include media-breakpoint-down(md) {
+		padding-top: rem(50);
+	}
 	@include media-breakpoint-down(sm) {}
 	@include media-breakpoint-down(xs) {
 		&__title{
