--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -120,7 +120,7 @@ block pagecontent
 					+icon("whatsapp")
 		.crls-cl.crls-tl
 			.after
-				+e.logo--js.logo.crls__logo(href='#mainHead')
+				+e.logo--js.logo.crls__logo(href='#mainHead1')
 					.logo_main.wow.fadeInLeft
 						img.res-i(src="img/logo.svg", alt="")
 					.logo_name.wow.fadeInRight
@@ -135,13 +135,13 @@ block pagecontent
 			+b.crls__langs
 				a(href='#') Eng
 				+e.SPAN.current.text-white Rus
-			a.crls__call.callDown(href="#s-form")
+			a.crls__call.callDown(href="#s-form1")
 				span.btt-call
 					span.animate
 						+icon('hand2')
 				span.txt связаться
 			
-			a.crls__call.callTop.d-none(href="#mainHead")
+			a.crls__call.callTop.d-none(href="#mainHead1")
 				span.btt-call
 					span
 						+icon('arrow-top')
