--- a/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
+++ b/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
@@ -9,18 +9,18 @@ mixin s-portfolio()
 					.d-none.d-lg-block
 						ul.etabs.wrks__tbs-links
 							li.active
-								a(href='#tab1') Все работы
+								a(href='#') Все работы
 							
 							li 
-								a(href='#tab1') Веб
+								a(href='#') Веб
 							
 							li 
-								a(href='#tab1') Упаковка
+								a(href='#') Упаковка
 							
 							li 
-								a(href='#tab1') Полиграфия
+								a(href='#') Полиграфия
 							li 
-								a(href='#tab1') Мобильные приложения
+								a(href='#') Мобильные приложения
 							
 							//
 								<li><a href="#tab2"></a></li>
