--- a/sourse/pug/blocks/modal/_modal.pug
+++ b/sourse/pug/blocks/modal/_modal.pug
@@ -35,4 +35,10 @@ mixin modal()
 	div(id="modal-team" class="zoom-anim-dialog mfp-hide modal-win  " )
 		+s-team-m(class="")
 	// #modal-team
+	div(id="modal-thanks" class="zoom-anim-dialog mfp-hide modal-win modal-win--thanks " )
+		img.res-i(src="img/check-thanks.png", alt="")
+		.modal-win__title Спасибо за Вашу заявку!
+		.modal-win__text В&nbsp;течении рабочего дня наш специалист свяжется с&nbsp;вами
+		
+	// #modal-thanks
 	// modal
