--- a/sourse/pug/blocks/s-form/_s-form.pug
+++ b/sourse/pug/blocks/s-form/_s-form.pug
@@ -3,6 +3,7 @@ mixin s-form()
 	+b.SECTION.s-form.section#s-form&attributes(attributes)
 		.container
 			+b.section-title.text-center
+				a.popup-with-move-anim(href="#modal-thanks") modal-thanks
 				h2 
 					span.text-warning Оценить  
 					| 
