--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -4,17 +4,62 @@
 	max-width: 100%;
 	background-color: #ffffff;
 	padding-top: rem(40);
+	margin-left: auto;
+	margin-right: auto;
 	
 	.modal-content {
 		// max-width: 485px;
 		// padding-right: 40px 15px;
 	}
 	.mfp-close {
-		color: $primary;
+		// color: $primary;
+		background-color: #F6F6F6;
+		color: #bababa;
+		outline: none;
+		// opacity: 0.5;
 		font-size: 40px;
 		font-weight: 100;
+		width: 40px;
+    height: 40px;
+    border-radius: 50%;
+		line-height: 40px;
+		right: 20px;
+		top: 20px;
 	}   
+	&--thanks{
+		max-width: 480px;
+		text-align: center;
+		border-radius: 10px;
+		padding-top: 20px;
+	}
+	&__title{
+		@include rfs(rem(44));
+		font-family: "PF Agora Slab Pro - Ultra Black";
+		line-height: 1;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: em(150);
+		padding-bottom: 0.5em;
+		position: relative;
+		margin-bottom: .5em;
+		&::before{
+			content: '';
+			@include a-cent(x);
+			width: em(100);
+			background-color: $body-color;
+			height: 3px;
+			bottom: 0;
+		}
+	}
+	&__text{
+		font-size: rem(18);
+		max-width: em(350);
+		margin-left: auto;
+		margin-right: auto;
+		padding-bottom: rem(60);
+	}
 }
+
 
 a {
 	outline: 0 !important;
